--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/imap": "^0.8.42",
+    "@types/mailparser": "^3.4.6",
     "@types/node": "^20.16.0",
     "@types/nodemailer": "^7.0.2",
     "@types/react": "^18.3.0",
