--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "mood",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,md}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,css,md}\"",
     "postinstall": "prisma generate",
     "vercel-build": "prisma migrate deploy && next build"
   },
@@ -38,6 +41,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.0.0",
     "postcss": "^8.4.0",
+    "prettier": "^3.6.2",
     "prisma": "^6.0.0",
     "tailwindcss": "^3.4.0",
     "tsx": "^4.20.6",
